Fix animation flickering upon page load.

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -69,6 +69,10 @@ body {
   height: 100%;
 }
 
+.wow {
+  visibility: hidden;
+}
+
 .project {
   height: 100vh;
   color: #dfe6e9;
